@@ -895,6 +895,15 @@ cookie_auth_direct_agents         = (wget|curl|python|Go-http-client)
 </Component>
 
 #####################################
+# MOBILE
+<Component Thruk::Plugin::Mobile>
+    # additonal links on the start page in the form
+    # <name> ; <url>
+    # the url is relative to the mobile.cgi
+    #links = Dashboard ABC ; panorama.cgi?map=ABC
+</Component>
+
+#####################################
 # Action Menus
 #action_menu_items_folder = ./action_menus/
 
